# ChatRust

./: Cargo.toml
src/: .env  ar.rs  chat.html  index.html  login.html  main.rs  server.rs
src/crypto/: mod.rs
