[package]
name = "encrypted_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
futures-util = "0.3"
jsonwebtoken = "8.1"  # Biblioteca para JWT
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # Para serializar/deserializar JSON
chrono = "0.4"  







